# badge_generator

./: .dockerignore  .gitignore  00_START_HERE.md  DOCUMENTATION_INDEX.md  Dockerfile  FILE_MANIFEST.md  FINAL_CHECKLIST.md  FINAL_TEST_REPORT.md  FINAL_VERIFICATION_REPORT.md  IMAGE_MANAGER_GUIDE.md  IMPLEMENTATION_SUMMARY.md  PROJECT_COMPLETION_SUMMARY.md  PYTHON_STANDARDS_GUIDE.md  QUICKSTART.md  README.md  REFACTORING_REPORT.md  REFACTORING_SUMMARY.md  SOLUTION_SUMMARY.md  check_template.py  comprehensive_test.py  config.ini  crawl_image.py  create_test_images.py  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  end_to_end_test.py  execute.py  execute_gui.py  pictool.conf  positions.json  pyproject.toml  pytest.ini  requirements.ini  requirements.txt  run.bat  run.py  run.pyw  runner.bat  setup.py  (+2 more)
.github/workflows/: ci_cd.yml
config/: app_conf.py  config.ini  config.ini.bak  config_with_crawler.ini  positions.json
data/: badgegenerator.db
docs/: 00_START_HERE.md  API_REFERENCE.md  ARCHITECTURE.md  CONTRIBUTING.md  DEVELOPER_GUIDE.md  DOCKER_SETUP_GUIDE.md  ENHANCEMENTS.md  FILE_MANIFEST.md  INDEX.md  PREVIEW_FEATURE.md  PROJECT_STATUS.md  PROJECT_STRUCTURE.md  QUICKSTART.md  README.md  REFERENCE.md  RELEASE_NOTES_v3.0.0.md  ROADMAP.md  TROUBLESHOOTING_AND_FAQS.md
img/des_img/: README.md  info.txt
img/src_img/: README.md
scripts/: README.md  create_test_images.py  run.bat  runner.bat
src/: async_downloader.py  badge_generator.py  badge_gui.py  config.py  config_manager.py  config_old.py  config_profiles.py  database.py  logging_config.py  services.py  utilities.py  validators.py
tests/: check_template.py  end_to_end_test.py  test_crawler.py  test_results.py  test_units.py
tools/: __main__.py  data.xlsx  image_crawler.py  image_manager.py  mock_data_generator.py  name_verifier.py  owncloud_connector.py  test_image_manager.py  test_preview_paths.py  util.py  verify_environment.py
